cmake_minimum_required(VERSION 3.24)
project(cs201)

set(CMAKE_CXX_STANDARD 23)

add_executable(cs201 main.cpp sources/pointer_variable_address_operator.cpp sources/pointer_variable_address_operator.h sources/arrays_userinput.h sources/arrays_userinput.cpp sources/arrays_sumof_squaresof_array.cpp sources/arrays_sumof_squaresof_array.h)
